# pdf-consensus-becr

./: .gitignore  .pre-commit-config.yaml  COMPLETE_GITHUB_PUSH_INSTRUCTIONS.md  Makefile  PUSH_NOW.md  PUSH_TO_GITHUB_GUIDE.md  README.md  add_missing_functions_to_catalog.py  aggressive_test_fixer.py  analyze_missing_files_and_functions.py  batch_test_fixer.py  build_test_catalog.py  collection_output.txt  comprehensive_test_coverage_summary.py  comprehensive_test_runner.py  conftest_unit_fix.py  create_minimal_gui_tests.py  create_minimal_integration_tests.py  create_minimal_working_tests.py  demo_change_tracking.py  enhance_test_catalog_with_execution_tracking.py  file_index_readme.md  file_index_readme_backup.md  final_implementation_summary.py  final_test_fixing_summary.md  fix_adhoc_test_syntax.py  fix_all_failing_tests.py  fix_all_tests_systematically.py  fix_analytics_export.py  fix_common_imports.py  fix_generated_tests.py  fix_integration_tests.py  fix_remaining_test_issues.py  fix_syntax_errors.py  fix_test_imports.py  generate_comprehensive_tests.py  identify_untested_functions.py  implement_placeholder_tests.py  integration_errors.txt  optimize_tesseract_for_clear_text.py  (+28 more)
.github/workflows/: ci-cd.yml  ci.yml  docs.yml  release.yml  security.yml
.kiro/steering/: NO MOCKS, STUBS, TEST FILES EVER.md  product.md  structure.md  tech.md
.kreuzberg/mime/: c8f099a542c8399d.msgpack
Source_docs/: invalid_files_log.txt
Source_docs/2024ELA SupplementalStandards/: 2024ELA SupplementalStandards.csv  2024ELA SupplementalStandards.md  2024ELA SupplementalStandards.txt
Source_docs/CoreAppendicesMathematicsHighSchool/: CoreAppendicesMathematicsHighSchool.csv  CoreAppendicesMathematicsHighSchool.md  CoreAppendicesMathematicsHighSchool.txt
Source_docs/CoreStandardsModernMathematics/: CoreStandardsModernMathematics.csv  CoreStandardsModernMathematics.md  CoreStandardsModernMathematics.txt
Source_docs/DriversEd - UtahCoreStandards/: DriversEd - UtahCoreStandards.csv  DriversEd - UtahCoreStandards.md  DriversEd - UtahCoreStandards.txt
Source_docs/ELA Core Guide 6th Grade/: ELA Core Guide 6th Grade.csv  ELA Core Guide 6th Grade.md  ELA Core Guide 6th Grade.txt
Source_docs/ELA CoreGuide GRADES 9-10/: ELA CoreGuide GRADES 9-10.csv  ELA CoreGuide GRADES 9-10.md  ELA CoreGuide GRADES 9-10.txt
Source_docs/ELA Guide GRADES 7-8/: ELA Guide GRADES 7-8.csv  ELA Guide GRADES 7-8.md  ELA Guide GRADES 7-8.txt
Source_docs/ELAguide GRADES 11-12/: ELAguide GRADES 11-12 .csv  (+2 more)
config/: default_files.json  engine_configurations.ndjson  engine_configurations.ndjson.backup
docs/: PRD.md  README.md  warnings_suppressed.md
functions/: README.md  __init__.py  analyze_project_test_coverage.py  detect_missing_functions.py  enhance_catalog_fields.py  execution_tracking_schema.json  field_attributes_schema.json  function_catalog.ndjson  function_catalog_backup.ndjson  function_catalog_complete.ndjson  mcp_test_management.json  run_mcp_tests.py  test_catalog.ndjson  test_catalog_backup.ndjson  validate_catalog.py  visual_ocr_testing_functions.py
output/: COMPLETE_SYSTEM_VALIDATION_SUMMARY.md  aggressive_fixes_summary.json  batch_test_analysis.md  catalog_test_integration_summary.json  comprehensive_engine_gbg_integration_summary.md  comprehensive_test_results.json  comprehensive_utility_function_tests_summary.md  configuration_system_summary.md  configuration_testing_summary.md  corrected_gbg_metadata_test.json  corrected_output_system_final_summary.md  corrected_output_system_summary.md  corrected_root_pdf_metadata.json  coverage.json  default_outputs_summary.json  dual_output_system_summary.md  enhanced_catalog_fields_summary.md  enhanced_character_combination_summary.md  enhanced_engine_processing_with_configuration_management_summary.md  enhanced_per_engine_configuration_summary.md  enhanced_spatial_matching_summary.md  field_attributes_completion_summary.md  final_implementation_summary.md  full_pdf_processing_enforcement_summary.md  function_catalog_enhancement_summary.md  gbg_guided_tesseract_implementation_summary.md  gbg_integration_system_summary.md  github_mcp_setup_guide.md  github_push_summary.md  image_ignore_configuration_summary.md  individual_test_results.json  integrated_engine_processing_summary.md  mcp_clarification.md  mcp_function_catalog_integration_summary.md  mcp_migration_strategy.md  mcp_setup_guide.md  mcp_working_confirmation.md  missing_files_and_functions_report.json  missing_functions_report.json  mock_removal_summary.md  (+46 more)
scripts/: test_headless.ps1
tests/: __init__.py  conftest.py
(+384 files in other folders)
